<resources>
    <string name="app_name">喵窝(无图版)</string>
    <string name="file_provider">org.miaowo.miaowo.fileProvider</string>

    <string name="square">广场</string>
    <string name="unread">未读</string>
    <string name="notification">通知</string>
    <string name="topic">话题</string>
    <string name="title">主题</string>
    <string name="user">会员</string>
    <string name="user_list">用户详情</string>
    <string name="search">搜索</string>
    <string name="question">提问</string>
    <string name="setting">设置</string>
    <string name="daily">每日</string>
    <string name="office">办公室</string>
    <string name="water">灌水</string>
    <string name="question_detail">问题详情</string>
    <string name="hint_title">标题</string>
    <string name="hint_reply">回复正文</string>
    <string name="hint_tags">话题，可以为空，以 ; (英文分号)分割</string>
    <string name="send">发送</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="give_up">算了</string>
    <string name="other">其他</string>
    <string name="scan">浏览</string>
    <string name="like">粉丝</string>
    <string name="focus">关注</string>
    <string name="focus_cancel">取消关注</string>
    <string name="focus_canceled">已取消关注</string>
    <string name="focus_success">关注成功</string>
    <string name="post">帖子</string>
    <string name="reply">回复</string>
    <string name="reply_to">回复: %1$s</string>
    <string name="more99">99+</string>
    <string name="chat">会话</string>
    <string name="chat_all">所有聊天</string>
    <string name="reload">重新加载</string>
    <string name="focused">Ta 关注的</string>
    <string name="liked">关注 Ta的</string>
    <string name="edit">编辑</string>
    <string name="info">信息</string>
    <string name="manager">管理</string>
    <string name="ban">封禁</string>
    <string name="bug">Bug</string>
    <string name="blog">Blog</string>
    <string name="feedback">反馈</string>
    <string name="site">站点</string>
    <string name="profile">账户</string>
    <string name="exit">退出</string>
    <string name="inbox">收件箱</string>
    <string name="anonymous">匿名</string>

    <string name="status">状态</string>
    <string name="statusOnline">在线</string>
    <string name="statusHide">隐身</string>
    <string name="statusOffline">离线</string>
    <string name="statusDnd">勿扰</string>
    <string name="statusAway">离开</string>

    <string name="user_detail">资料</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="password_check">确认密码</string>
    <string name="email">邮箱</string>
    <string name="name">唯一用户名</string>
    <string name="user_remove">注销账户</string>
    <string name="user_info">用户信息: </string>
    <string name="pwd_ori">原密码: </string>
    <string name="pwd_new">新密码: </string>
    <string name="pwd_reset_success">密码重置邮件已发送。</string>
    <string name="logout">登出</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="to_login">已经有账号了？点击这里登录</string>
    <string name="register_toolbar">加入喵窝</string>
    <string name="login_toolbar">登录至喵窝</string>
    <string name="login_hint">用户名</string>
    <string name="join">加入喵窝</string>
    <string name="github">使用 GitHub 账户登录</string>
    <string name="forget">我忘记了密码</string>
    <string name="website">个人网站: </string>
    <string name="please_login">请先登录</string>
    <string name="save_pwd">保存密码</string>

    <string name="from_album">从相册</string>
    <string name="from_camera">从相机</string>
    <string name="from_text">文字头像</string>

    <string name="data_loading">加载中…</string>
    <string name="data_loading_detail">正在加载: %1$s</string>
    <string name="process_login">正在登录……</string>
    <string name="process_reg">正在注册……</string>
    <string name="process_info">获取服务器信息……</string>
    <string name="process_user">正在获取用户信息……</string>
    <string name="process_get_token">正在获取用户令牌</string>
    <string name="process_login_over">欢迎回来, %1$s</string>
    <string name="process_category">正在加载分区</string>
    <string name="user_edit_ok">修改完成, 重新登录后将更新信息</string>
    <string name="user_remove_wrong">注意!\n\n注销帐号后，您的一切信息都将从服务器数据库中删除\n您以后也无法通过该帐号登录喵窝\n\n确认删除吗？</string>
    <string name="update_start">升级! (•‾̑⌣‾̑•)✧˖°</string>
    <string name="update_later">以后再说吧</string>
    <string name="update_msg">%1$s\n\n点击升级后, 将会在后台下载安装包, 注意流量哦</string>
    <string name="topic_choose">请选择话题</string>

    <string name="forget_hint_1">请在这里输入你注册账户时所使用的邮箱地址，如果你输入的邮箱在我们的数据库中，我们会发送一封邮件给你，你可以通过它重设密码。</string>
    <string name="forget_hint_2">如果你在重设密码中遇到问题，请通过 pwreset@miaowo.org 联系我们。</string>
    <string name="register_hint">请输入一个你可以随时访问的邮箱，如果你忘记了喵窝账户的密码并且无法访问邮箱，你将无法再登录。</string>

    <string name="setting_user">用户设置</string>
    <string name="setting_sys">系统设置</string>
    <string name="todo">TODO</string>

    <string name="toggle_toolbar_open">open</string>
    <string name="toggle_toolbar_close">close</string>
    <string name="search_init">请输入要搜索的内容</string>

    <string-array name="index">
        <item>如果你不能简洁的表达你的想法，那只说明你还不够了解它。</item>
        <item>如果你不能简洁的表达你的想法，那只说明你还不够了解它。</item>
        <item>如果你不能简洁的表达你的想法，那只说明你还不够了解它。</item>
    </string-array>

    <string-array name="feedback_title">
        <item>我们的群</item>
        <item>APP问题</item>
        <item>网页及服务器问题</item>
        <item>另一个客户端(基于网页)</item>
    </string-array>

    <string-array name="feedback_value">
        <item>好奇喵 385231397</item>
        <item>么么么喵(执着) 1105188240</item>
        <item>Systemd</item>
        <item>毛不二 1289770378</item>
    </string-array>
</resources>
