<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect_indigo_100"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_album"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/from_album"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/from_camera"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/from_text"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>