<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:hint="@string/login_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/MiaoEditor.OneLineInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person"
                android:drawableStart="@drawable/ic_person"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/user"
            app:passwordToggleEnabled="true">

            <EditText
                style="@style/MiaoEditor.OneLineInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline"
                android:drawableStart="@drawable/ic_lock_outline"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/save_pwd"
            android:textColor="@color/md_black_1000"
            app:layout_constraintEnd_toEndOf="@+id/pwd"
            app:layout_constraintTop_toBottomOf="@+id/pwd" />

        <org.miaowo.miaowo.ui.processView.ProcessButton
            android:id="@+id/login"
            style="@style/MiaoButton.Green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/save" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="32dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <Button
            android:id="@+id/register"
            style="@style/MiaoButton.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Button
            android:id="@+id/github"
            style="@style/MiaoButton.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/github"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/register" />

        <Button
            android:id="@+id/forget"
            style="@style/MiaoButton.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/forget"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toBottomOf="@+id/github" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
