<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/mail"
            style="@style/MiaoEditor.OneLineInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/ic_mail_outline"
            android:drawableStart="@drawable/ic_mail_outline"
            android:hint="@string/email"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/register_hint"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/mail" />

        <EditText
            android:id="@+id/user"
            style="@style/MiaoEditor.OneLineInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_person"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/name"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <EditText
            android:id="@+id/pwd"
            style="@style/MiaoEditor.OneLineInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_vpn_key"
            android:drawableStart="@drawable/ic_vpn_key"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/user" />

        <EditText
            android:id="@+id/check"
            style="@style/MiaoEditor.OneLineInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_vpn_key"
            android:drawableStart="@drawable/ic_vpn_key"
            android:hint="@string/password_check"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/pwd" />

        <org.miaowo.miaowo.ui.processView.ProcessButton
            android:id="@+id/submit"
            style="@style/MiaoButton.Green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/check" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="@color/divider"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/submit" />

        <Button
            android:id="@+id/login"
            style="@style/MiaoButton.Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="32dp"
            android:text="@string/to_login"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/view2" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
