<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/mail"
            style="@style/MiaoEditor.OneLineInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_mail_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/ic_mail_outline" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/forget_hint_1"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/mail"
            android:layout_marginEnd="0dp"
            android:id="@+id/textView17" />

        <Button
            android:id="@+id/submit"
            style="@style/MiaoButton.Green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            android:layout_marginTop="32dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/forget_hint_2"
            app:layout_constraintEnd_toEndOf="@+id/mail"
            app:layout_constraintStart_toStartOf="@+id/mail"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/submit"
            android:layout_marginEnd="0dp" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>