<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/hint_title"
        android:maxLines="1"
        android:text="回复："
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="42dp"
        tools:layout_conversion_absoluteWidth="319dp"
        tools:layout_conversion_absoluteX="15dp"
        tools:layout_conversion_absoluteY="15dp" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_blue"
        android:text="@string/send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_content"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="354dp"
        tools:layout_conversion_absoluteX="15dp"
        tools:layout_conversion_absoluteY="287dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_content"
        android:layout_width="0dp"
        android:layout_height="197dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:hint="@string/hint_reply"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title"
        tools:layout_conversion_absoluteHeight="197dp"
        tools:layout_conversion_absoluteWidth="354dp"
        tools:layout_conversion_absoluteX="15dp"
        tools:layout_conversion_absoluteY="89dp" />
</android.support.constraint.ConstraintLayout>