<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A0000000"
    tools:context="org.miaowo.miaowo.activity.Add">

    <TextView
        android:id="@+id/tv_daily"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/daily"
        android:textColor="@color/md_blue_grey_700"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@drawable/bg_choose_circle_amber"
        app:layout_constraintRight_toLeftOf="@+id/tv_announcement"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />
    <TextView
        android:id="@+id/tv_announcement"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/announcement"
        android:textSize="24sp"
        android:textColor="@color/md_blue_grey_700"
        android:gravity="center"
        android:background="@drawable/bg_choose_circle_amber"
        app:layout_constraintBottom_toBottomOf="@+id/tv_daily"
        app:layout_constraintTop_toTopOf="@+id/tv_daily"
        app:layout_constraintRight_toLeftOf="@+id/tv_ask"
        app:layout_constraintLeft_toRightOf="@+id/tv_daily"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/tv_ask"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/ask"
        android:textSize="24sp"
        android:textColor="@color/md_blue_grey_700"
        android:gravity="center"
        android:background="@drawable/bg_choose_circle_amber"
        app:layout_constraintBottom_toBottomOf="@+id/tv_announcement"
        app:layout_constraintTop_toTopOf="@+id/tv_announcement"
        app:layout_constraintRight_toLeftOf="@+id/tv_water"
        app:layout_constraintLeft_toRightOf="@+id/tv_announcement" />
    <TextView
        android:id="@+id/tv_water"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/water"
        android:textSize="24sp"
        android:textColor="@color/md_blue_grey_700"
        android:gravity="center"
        android:background="@drawable/bg_choose_circle_amber"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ask"
        app:layout_constraintTop_toTopOf="@+id/tv_ask"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_ask" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_title"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="text"
            android:textColor="@color/md_white_1000"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_reply"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/send"
        app:layout_constraintVertical_bias="0.0">
        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:textColor="@color/md_white_1000" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="@drawable/bg_btn_blue"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cancel"
        app:layout_constraintHorizontal_chainStyle="spread" />
    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/bg_btn_red"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/send" />
</android.support.constraint.ConstraintLayout>
